--- a/css/styles.scss
+++ b/css/styles.scss
@@ -59,8 +59,9 @@ body {
 }
 
 .label {
-    font-size: 1.5rem;
+    font-size: 1.35rem;
     font-weight: 400;
+    text-align: center;
 }
 
 .search {
